# controllers/meters.js
@@ -4,6 +4,9 @@ const mongodb = require('../db/connect');
 // Instance of MongoDB
 const ObjectId = require('mongodb').ObjectId;
 
+// *** Data Validation *** //
+const { validationResult } = require('express-validator');
+
 // Case Function Getting All Meters
 const getAll = async (req, res, next) => {
 
@@ -12,8 +15,6 @@ const getAll = async (req, res, next) => {
                             db('electrical_commercial_measuring').
                             collection('meter').
                             find();
-
-    // It is key put database name and collection
 
     // Displaying result in array format json
     myResults.toArray().then((lists) => {
@@ -46,6 +47,13 @@ const getSingle = async (req, res, next) => {
 
 // Function to create a new meter via POST
 const createNewMeter = async (req, res) => {
+
+    // *** Data Validation *** //
+    const errors = validationResult(req);
+    if (!errors.isEmpty()) {
+      return res.status(500).json({ errors: errors.array() });
+    }
+
     // Get data from request object in JSON format
     const meter = {
       id_meter: req.body.id_meter,
@@ -77,5 +85,74 @@ const createNewMeter = async (req, res) => {
      console.log(resMongo);
   };   
 
+  // Function to update a specific meter via PUT
+  const updateOneMeter = async (req, res) => {
+    
+    // *** Data Validation *** //
+    const errors = validationResult(req);
+    if (!errors.isEmpty()) {
+      return res.status(500).json({ errors: errors.array() });
+    }
+    
+    // Getting the meter ID to update
+    const meterId = req.params.id_meter;
+    
+    // Getting the new meter information
+    const meterUpdate = {
+      id_meter: parseInt(meterId),
+      point_name: req.body.point_name,
+      type_meter: req.body.type_meter,
+      serial_number: req.body.serial_number,
+      maker: req.body.maker,
+      model: req.body.model,
+      habilitation_date: req.body.habilitation_date,      
+      state: req.body.state
+    };
+
+    // Trying to update the document in the MongoDB service
+    const resMongo = await mongodb.getDb()
+                      .db('electrical_commercial_measuring') // It is important to select the database
+                      .collection('meter') // It is important to select the collection
+                      .replaceOne({ id_meter: parseInt(meterId) }, meterUpdate);  // ReplaceOne function    
+
+    // If one document was altered  
+    if (resMongo.modifiedCount > 0) {
+      // Send HTTP 204 status Ok
+      res.status(204).send();
+    } else {
+      // Send HTTP 500 Error status
+      res.status(500).json(resMongo.error || ' Something was going wrong, please try again!.');
+    }
+
+    // For debugging
+    console.log(resMongo);
+  };
+  
+  // Function to delete one specific meter
+  const deleteOneMeter = async (req, res) => {
+    
+    // Getting the meter Id
+    const meterId = req.params.id_meter;
+
+    // Trying to delete it in MongoDB service
+    const resMongo = await mongodb.getDb().
+                      db('electrical_commercial_measuring'). // It is key to select the database
+                      collection('meter'). // It is key to select the collection
+                      remove({ id_meter : parseInt(meterId) }, true); // Filter using remove function                    
+    
+    // If one document was altered 
+    if (resMongo.deletedCount > 0) {
+      // Send HTTP 200 status Ok
+      res.status(200).send();
+    } else {
+      // Send HTTP 500 Error status
+      res.status(500).json(resMongo.error || ' Something was going wrong, please try again!.');
+    }
+
+     // For debugging
+     console.log(resMongo);
+  };
+
 // To expose or export these 3 functions for other JS resources in the apps modules
-module.exports = { getAll, getSingle, createNewMeter };
+module.exports = { getAll, getSingle, createNewMeter, 
+                   updateOneMeter, deleteOneMeter };
